--- a/app/src/main/res/layout/about.xml
+++ b/app/src/main/res/layout/about.xml
@@ -1,37 +1,278 @@
 <?xml version="1.0" encoding="utf-8"?>
- 
- <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
- 	android:orientation="vertical"
- 	android:layout_width="fill_parent"
- 	android:layout_height="fill_parent"
- 	android:padding="6dip">
- 	<ImageView
- 		android:src="@mipmap/ic_launcher"
- 		android:layout_width="wrap_content"
- 		android:layout_height="wrap_content"
- 		android:layout_gravity="center"
- 		android:paddingTop="10dip"/>
- 	<TextView
- 		android:id="@+id/about_top_label"
- 		android:layout_width="wrap_content"
- 		android:layout_height="wrap_content"
- 		android:layout_gravity="center"
- 		android:layout_weight="0"
- 		android:paddingTop="15dip"/>
- 	
- 	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
- 		android:orientation="horizontal"
- 		android:layout_width="fill_parent"
- 		android:layout_height="fill_parent">
-		<Button
-			android:id="@+id/about_email"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:text="Email Developers"/>
-		<Button
-			android:id="@+id/about_license"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:text="Third party licenses"/>
- 	 </LinearLayout>
- </LinearLayout>
+
+<androidx.coordinatorlayout.widget.CoordinatorLayout
+	xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:app="http://schemas.android.com/apk/res-auto"
+	android:layout_width="match_parent"
+	android:layout_height="match_parent"
+	android:fitsSystemWindows="true">
+
+	<com.google.android.material.appbar.AppBarLayout
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:theme="?actionBarTheme"
+		app:liftOnScroll="?appBarLiftOnScroll"
+		app:liftOnScrollTargetViewId="@id/scroll">
+
+		<androidx.appcompat.widget.Toolbar
+			android:id="@+id/toolbar"
+			android:layout_width="match_parent"
+			android:layout_height="?actionBarSize"
+			app:navigationIcon="@drawable/back_icon_control_normal_24dp"
+			app:popupTheme="?actionBarPopupTheme" />
+	</com.google.android.material.appbar.AppBarLayout>
+
+	<com.mrikso.foldercompare.ui.CoordinatorScrollingFrameLayout
+		android:layout_width="match_parent"
+		android:layout_height="match_parent">
+
+		<androidx.core.widget.NestedScrollView
+			android:id="@+id/scroll"
+			android:layout_width="match_parent"
+			android:layout_height="match_parent"
+			android:clipToPadding="false"
+			android:scrollbars="vertical">
+
+			<LinearLayout
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:padding="@dimen/screen_edge_margin"
+				android:clipToPadding="false"
+				android:divider="@drawable/transparent_divider_horizontal_16dp"
+				android:orientation="vertical"
+				android:showDividers="middle">
+
+				<com.google.android.material.card.MaterialCardView
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content"
+					app:cardPreventCornerOverlap="false">
+
+					<LinearLayout
+						android:layout_width="match_parent"
+						android:layout_height="wrap_content"
+						android:orientation="vertical"
+						android:paddingTop="@dimen/list_vertical_padding"
+						android:paddingBottom="@dimen/list_vertical_padding">
+
+						<LinearLayout
+							android:layout_width="match_parent"
+							android:layout_height="?listPreferredItemHeight"
+							android:paddingStart="?android:listPreferredItemPaddingStart"
+							android:paddingEnd="?android:listPreferredItemPaddingEnd"
+							android:gravity="center_vertical"
+							android:orientation="horizontal">
+
+							<ImageView
+								android:layout_width="@dimen/large_icon_size"
+								android:layout_height="@dimen/large_icon_size"
+								android:scaleType="centerCrop"
+								android:src="@mipmap/ic_launcher" />
+
+							<TextView
+								android:layout_width="wrap_content"
+								android:layout_height="wrap_content"
+								android:layout_marginStart="@dimen/content_start_from_screen_edge_margin_minus_40dp"
+								android:ellipsize="end"
+								android:maxLines="1"
+								android:text="@string/app_name"
+								android:textAppearance="@style/TextAppearance.AppCompat.Headline" />
+						</LinearLayout>
+
+						<LinearLayout
+							android:layout_width="match_parent"
+							android:layout_height="wrap_content"
+							android:paddingStart="?android:listPreferredItemPaddingStart"
+							android:paddingEnd="?android:listPreferredItemPaddingEnd"
+							android:paddingTop="8dp"
+							android:paddingBottom="8dp"
+							android:background="?selectableItemBackground"
+							android:clickable="true"
+							android:focusable="true"
+							android:gravity="center_vertical"
+							android:orientation="horizontal">
+
+							<ImageView
+								android:layout_width="@dimen/icon_size"
+								android:layout_height="@dimen/icon_size"
+								android:scaleType="centerCrop"
+								android:src="@drawable/information_icon_white_24dp"
+								android:tint="?android:textColorSecondary" />
+
+							<LinearLayout
+								android:layout_width="0dp"
+								android:layout_weight="1"
+								android:layout_height="wrap_content"
+								android:gravity="center_vertical"
+								android:orientation="vertical">
+
+								<TextView
+									android:layout_width="wrap_content"
+									android:layout_height="wrap_content"
+									android:layout_marginStart="@dimen/content_start_from_screen_edge_margin_minus_24dp"
+									android:ellipsize="end"
+									android:maxLines="1"
+									android:text="@string/about_version_title"
+									android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />
+
+								<TextView
+									android:id="@+id/version"
+									android:layout_width="wrap_content"
+									android:layout_height="wrap_content"
+									android:layout_marginStart="@dimen/content_start_from_screen_edge_margin_minus_24dp"
+									android:ellipsize="end"
+									android:maxLines="1"
+									android:text="@string/app_version"
+									android:textAppearance="@style/TextAppearance.AppCompat.Caption" />
+							</LinearLayout>
+						</LinearLayout>
+
+						<LinearLayout
+							android:id="@+id/github"
+							android:layout_width="match_parent"
+							android:layout_height="?listPreferredItemHeightSmall"
+							android:paddingStart="?android:listPreferredItemPaddingStart"
+							android:paddingEnd="?android:listPreferredItemPaddingEnd"
+							android:background="?selectableItemBackground"
+							android:gravity="center_vertical"
+							android:orientation="horizontal">
+
+							<ImageView
+								android:layout_width="@dimen/icon_size"
+								android:layout_height="@dimen/icon_size"
+								android:scaleType="centerCrop"
+								android:src="@drawable/github_icon_white_24dp"
+								android:tint="?android:textColorSecondary" />
+
+							<TextView
+								android:layout_width="wrap_content"
+								android:layout_height="wrap_content"
+								android:layout_marginStart="@dimen/content_start_from_screen_edge_margin_minus_24dp"
+								android:ellipsize="end"
+								android:maxLines="1"
+								android:text="@string/about_github_title"
+								android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />
+						</LinearLayout>
+
+						<LinearLayout
+							android:id="@+id/licenses"
+							android:layout_width="match_parent"
+							android:layout_height="?listPreferredItemHeightSmall"
+							android:paddingStart="?android:listPreferredItemPaddingStart"
+							android:paddingEnd="?android:listPreferredItemPaddingEnd"
+							android:background="?selectableItemBackground"
+							android:gravity="center_vertical"
+							android:orientation="horizontal">
+
+							<ImageView
+								android:layout_width="@dimen/icon_size"
+								android:layout_height="@dimen/icon_size"
+								android:scaleType="centerCrop"
+								android:src="@drawable/text_file_icon_white_24dp"
+								android:tint="?android:textColorSecondary" />
+
+							<TextView
+								android:layout_width="wrap_content"
+								android:layout_height="wrap_content"
+								android:layout_marginStart="@dimen/content_start_from_screen_edge_margin_minus_24dp"
+								android:ellipsize="end"
+								android:maxLines="1"
+								android:text="@string/about_licenses_title"
+								android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />
+						</LinearLayout>
+
+					</LinearLayout>
+				</com.google.android.material.card.MaterialCardView>
+
+				<com.google.android.material.card.MaterialCardView
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content"
+					app:cardPreventCornerOverlap="false">
+
+					<LinearLayout
+						android:layout_width="match_parent"
+						android:layout_height="wrap_content"
+						android:orientation="vertical"
+						android:paddingTop="@dimen/list_vertical_padding"
+						android:paddingBottom="@dimen/list_vertical_padding">
+
+						<LinearLayout
+							android:layout_width="match_parent"
+							android:layout_height="?listPreferredItemHeightSmall"
+							android:paddingStart="?android:listPreferredItemPaddingStart"
+							android:paddingEnd="?android:listPreferredItemPaddingEnd"
+							android:gravity="center_vertical"
+							android:orientation="horizontal">
+
+							<TextView
+								android:layout_width="wrap_content"
+								android:layout_height="wrap_content"
+								android:ellipsize="end"
+								android:maxLines="1"
+								android:text="@string/about_author_title"
+								android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+								android:textColor="?android:textColorSecondary" />
+						</LinearLayout>
+
+						<LinearLayout
+							android:id="@+id/author_name"
+							android:layout_width="match_parent"
+							android:layout_height="?listPreferredItemHeightSmall"
+							android:paddingStart="?android:listPreferredItemPaddingStart"
+							android:paddingEnd="?android:listPreferredItemPaddingEnd"
+							android:background="?selectableItemBackground"
+							android:clickable="true"
+							android:focusable="true"
+							android:gravity="center_vertical"
+							android:orientation="horizontal">
+
+							<ImageView
+								android:layout_width="@dimen/icon_size"
+								android:layout_height="@dimen/icon_size"
+								android:scaleType="centerCrop"
+								android:src="@drawable/person_icon_white_24dp"
+								android:tint="?android:textColorSecondary" />
+
+							<TextView
+								android:layout_width="wrap_content"
+								android:layout_height="wrap_content"
+								android:layout_marginStart="@dimen/content_start_from_screen_edge_margin_minus_24dp"
+								android:ellipsize="end"
+								android:maxLines="1"
+								android:text="@string/about_author_name_title"
+								android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />
+						</LinearLayout>
+
+						<LinearLayout
+							android:id="@+id/author_github"
+							android:layout_width="match_parent"
+							android:layout_height="?listPreferredItemHeightSmall"
+							android:paddingStart="?android:listPreferredItemPaddingStart"
+							android:paddingEnd="?android:listPreferredItemPaddingEnd"
+							android:background="?selectableItemBackground"
+							android:gravity="center_vertical"
+							android:orientation="horizontal">
+
+							<ImageView
+								android:layout_width="@dimen/icon_size"
+								android:layout_height="@dimen/icon_size"
+								android:scaleType="centerCrop"
+								android:src="@drawable/github_icon_white_24dp"
+								android:tint="?android:textColorSecondary" />
+
+							<TextView
+								android:layout_width="wrap_content"
+								android:layout_height="wrap_content"
+								android:layout_marginStart="@dimen/content_start_from_screen_edge_margin_minus_24dp"
+								android:ellipsize="end"
+								android:maxLines="1"
+								android:text="@string/about_author_github_title"
+								android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />
+						</LinearLayout>
+
+
+					</LinearLayout>
+				</com.google.android.material.card.MaterialCardView>
+			</LinearLayout>
+		</androidx.core.widget.NestedScrollView>
+	</com.mrikso.foldercompare.ui.CoordinatorScrollingFrameLayout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
