--- a/app/src/main/res/layout/cmp_item.xml
+++ b/app/src/main/res/layout/cmp_item.xml
@@ -5,7 +5,7 @@
 	android:layout_height="fill_parent"
 	android:orientation="vertical">
 
-	<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+	<RelativeLayout
 		android:layout_width="fill_parent"
 		android:layout_height="fill_parent"
 		android:layout_weight="1"
@@ -39,7 +39,7 @@
 
 	</RelativeLayout>
 
-	<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+	<RelativeLayout
 		android:layout_width="fill_parent"
 		android:layout_height="fill_parent"
 		android:layout_weight="1"
