--- a/app/src/main/res/layout/folder_chooser.xml
+++ b/app/src/main/res/layout/folder_chooser.xml
@@ -1,15 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-	android:orientation="vertical" >
+	android:layout_width="fill_parent"
+	android:layout_height="fill_parent"
+	xmlns:app="http://schemas.android.com/apk/res-auto"
+	android:orientation="vertical">
+	<com.google.android.material.appbar.AppBarLayout
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:theme="?actionBarTheme"
+		app:liftOnScroll="?appBarLiftOnScroll"
+		app:liftOnScrollTargetViewId="@id/scroll">
 
+	<androidx.appcompat.widget.Toolbar
+		android:id="@+id/toolbar"
+		android:layout_width="match_parent"
+		android:layout_height="?actionBarSize"
+		app:navigationIcon="@drawable/back_icon_control_normal_24dp"
+		app:popupTheme="?actionBarPopupTheme" />
+
+	</com.google.android.material.appbar.AppBarLayout>
 	<LinearLayout
         android:id="@+id/chooser_top"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_weight="0.05"
-        android:orientation="vertical" >
+        android:orientation="vertical" >
+
 	    <TextView
 	        android:id="@+id/chooser_dir"
 	        android:layout_width="fill_parent"
@@ -30,12 +46,14 @@
         </ListView>
         
 	</LinearLayout>
-
+
+
 	<LinearLayout
 	    android:layout_width="fill_parent"
 	    android:layout_height="wrap_content"
 	    android:padding="5dp" >
-	
+	
+
 		<EditText
 		    android:id="@+id/chooser_file_name"
 		    android:layout_width="fill_parent"
@@ -44,16 +62,18 @@
 		    android:layout_marginRight="10dip"
 		    android:layout_weight="0.3"
 		    android:singleLine="true" >
-
 		</EditText>
-	
-	    <Button
-	        android:id="@+id/chooser_save"
-	        android:layout_width="fill_parent"
-	        android:layout_height="wrap_content"
-	        android:layout_weight="1"
-	        android:text="Save"/>
-	
+		<com.google.android.material.button.MaterialButton
+			app:strokeColor="?attr/colorAccent"
+			android:id="@+id/chooser_save"
+			style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_gravity="center"
+			android:textColor="?attr/colorAccent"
+			android:focusable="true"
+			android:text="@string/btn_save_result"
+			android:textSize="16sp" />
 	</LinearLayout>
     
 </LinearLayout>
