--- a/app/src/main/res/xml/preference.xml
+++ b/app/src/main/res/xml/preference.xml
@@ -1,7 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
-
+<PreferenceScreen
+    xmlns:android="http://schemas.android.com/apk/res/android">
         <PreferenceCategory android:title="@string/pref_display_view">
+            <ListPreference
+                android:defaultValue="0"
+                android:entries="@array/theme_names"
+                android:entryValues="@array/theme_values"
+                android:key="ui_theme"
+                android:title="@string/pref_theme" />
             <CheckBoxPreference
                 android:defaultValue="false"
                 android:key="setting_only_eq"
@@ -27,5 +33,36 @@
                 android:summary="Display hidden files and folders"
                 android:title="Show Hidden" />
         </PreferenceCategory>
-
+        <PreferenceCategory android:title="@string/pref_filter_view">
+        <CheckBoxPreference
+            android:defaultValue="false"
+            android:key="setting_only_eq"
+            android:persistent="true"
+            android:summary="Display files and folders that have equal content"
+            android:title="Show Only Equal" />
+        <CheckBoxPreference
+            android:defaultValue="false"
+            android:key="setting_only_eq"
+            android:persistent="true"
+            android:summary="Display files and folders that have equal content"
+            android:title="Show Only Equal" />
+        <CheckBoxPreference
+            android:defaultValue="false"
+            android:key="setting_only_eq"
+            android:persistent="true"
+            android:summary="Display files and folders that have equal content"
+            android:title="Show Only Equal" />
+        <CheckBoxPreference
+            android:defaultValue="false"
+            android:key="setting_only_eq"
+            android:persistent="true"
+            android:summary="Display files and folders that have equal content"
+            android:title="Show Only Equal" />
+        <CheckBoxPreference
+            android:defaultValue="false"
+            android:key="setting_only_eq"
+            android:persistent="true"
+            android:summary="Display files and folders that have equal content"
+            android:title="Show Only Equal" />
+    </PreferenceCategory>
 </PreferenceScreen>
